--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "pnpm run typeorm migration:generate -d src/data-source.ts",
+    "migration:run": "pnpm run typeorm migration:run -d src/data-source.ts",
+    "migration:revert": "pnpm run typeorm migration:revert -d src/data-source.ts",
+    "migration:show": "pnpm run typeorm migration:show -d src/data-source.ts",
     "docker:build": "docker build -t bookmark-backend:latest .",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
@@ -35,6 +40,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "dotenv": "^17.2.3",
     "pg": "^8.17.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
